[project]
name = "codex-journey"
version = "0.1.0"
description = "从零构建自主编码 Agent，基于 Harness 理论"
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.0",
    "openai>=1.0",
    "rich>=13.0",
    "python-dotenv>=1.0",
    "httpx>=0.25",
    "ruff>=0.4",
    "pytest>=8.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "ruff>=0.4",
    "mypy>=1.10",
]

[project.scripts]
codex = "codex_journey.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
